Added js to document/html

--- a/testing.html
+++ b/testing.html
@@ -1,5 +1,13 @@
 <!Doctype html>
 <html>
 <head></head>
-<body></body>
+<body>
+
+<script type="text/javascript">
+
+document.write("Heyyyyaa");
+
+</script>
+
+</body>
 </html>
